kernel/tests/ui/fail_spec_new_wrong_sig.stderr
error[E0277]: the trait bound `extern "C" fn(u32) -> ! {body_fn}: EntryPointFn` is not satisfied
  --> tests/ui/fail_spec_new_wrong_sig.rs:18:55
   |
18 |     let _spec = kernel::partition::PartitionSpec::new(body_fn, 0);
   |                 ------------------------------------- ^^^^^^^ the trait `EntryPointFn` is not implemented for fn item `extern "C" fn(u32) -> ! {body_fn}`
   |                 |
   |                 required by a bound introduced by this call
   |
help: the following other types implement trait `EntryPointFn`
  --> $WORKSPACE/rtos-traits/src/partition.rs
   |
   | impl EntryPointFn for PartitionEntry {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern "C" fn() -> !`
...
   | impl EntryPointFn for PartitionBody {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern "C" fn(u32) -> !`
note: required by a bound in `PartitionSpec::new`
  --> $WORKSPACE/rtos-traits/src/partition.rs
   |
   |     pub fn new(entry_point: impl EntryPointFn, r0: u32) -> Self {
   |                                  ^^^^^^^^^^^^ required by this bound in `PartitionSpec::new`

error[E0308]: mismatched types
  --> tests/ui/fail_spec_new_wrong_sig.rs:21:45
   |
13 | extern "C" fn body_fn(_arg: u32) -> ! {
   | ------------------------------------- function `body_fn` defined here
...
21 |     let _bad = kernel::PartitionSpec::entry(body_fn);
   |                ---------------------------- ^^^^^^^ incorrect number of function parameters
   |                |
   |                arguments to this function are incorrect
   |
   = note: expected fn pointer `extern "C" fn() -> !`
                 found fn item `extern "C" fn(u32) -> ! {body_fn}`
note: associated function defined here
  --> $WORKSPACE/rtos-traits/src/partition.rs
   |
   |     pub fn entry(f: PartitionEntry) -> Self {
   |            ^^^^^
help: use parentheses to call this function
   |
21 |     let _bad = kernel::PartitionSpec::entry(body_fn(/* u32 */));
   |                                                    +++++++++++
